--- a/views/index.haml
+++ b/views/index.haml
@@ -16,6 +16,7 @@
       %meta{:content => "200", :property => "og:image:height"}/
       %link{:href => "./favicon.ico", :rel => "shortcut icon"}/
       %link{:rel => "stylesheet", :href => "//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"}
+      %link{:rel => "stylesheet", :href => stylesheet_path("app")}
   %body
     .navbar.navbar-default.navbar-static{:role => "navigation"}
       .container
